--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,14 +5,14 @@ setw -g xterm-keys on
 set -q -g status-utf8 on	# expect UTF-8 (tmux < 2.2)
 setw -q -g utf8 on
 
-set -g history-limit 5000	#boost history
+set -g history-limit 5000	# boost history
 
 # Reset Prefix
 unbind C-b
-set-option -g prefix C-a	#set prefix: Ctrl+a
+set-option -g prefix C-a	# set prefix: Ctrl+a
 
 # reload config
-bind-key -n M-r source-file ~/.tmux.conf	#set Alt+r to reload tmux config
+bind-key -n M-r source-file ~/.tmux.conf	# set Alt+r to reload tmux config
 
 # close pane
 bind-key -n C-x kill-pane
@@ -30,17 +30,11 @@ unbind [
 bind Escape copy-mode
 unbind p
 bind p paste-buffer
-bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'y' copy-selection
+# bind-key -t vi-copy 'v' begin-selection
+# bind-key -t vi-copy 'y' copy-selection
 
 ## mouse
 set -g mouse on
-
-# for < 2.1
-#set -g mode-mouse on
-#set -g mouse-select-pane on
-#set -g mouse-resize-pane on
-#set -g mouse-select-window on
 
 #find session
 bind-key -n C-f command-prompt -p find-session 'switch-client -t %%'
@@ -64,18 +58,15 @@ set -g set-titles on		# set terminal title
 set -g status-interval 10
 
 ## basic
-set -g status-bg colour233
-set -g status-fg colour240
+set -g status-style bg=colour233,fg=colour240
 
 ## left side status bar
-set -g status-left-bg colour233
-set -g status-left-fg colour243
+set -g status-left-style bg=colour233,fg=colour243
 set -g status-left-length 40
 set -g status-left "#[fg=colour232,bg=colour39,bold] #S #[fg=colour39,bg=colour244,bold] #[fg=colour233,bg=colour244] #(whoami) #[fg=colour244,bg=colour241,bold] #[fg=colour234,bg=colour241] #I:#P #[fg=colour241,bg=colour233,nobold] "
 
 ## Right side status bar
-set -g status-right-bg colour233
-set -g status-right-fg colour243
+set -g status-right-style bg=colour233,fg=colour243
 set -g status-right-length 150
 set -g status-right "#[fg=colour241,bg=colour233]  #[fg=colour234,bg=colour241] #H #[fg=colour244,bg=colour241]  #[fg=colour233,bg=colour244] %Y-%m-%d #[fg=colour247,bg=colour244]  #[fg=colour232,bg=colour247,bold] %H:%M"
 
@@ -85,12 +76,10 @@ set -g window-status-current-format "  #I:#W#F  "
 #set -g window-status-current-format "#[fg=colour233,bg=black] #[fg=colour81,nobold] #I:#W#F #[fg=colour233,bg=black,nobold]"
 
 ## current window status
-set -g window-status-current-bg colour39
-set -g window-status-current-fg colour235
+set -g window-status-current-style bg=colour39,fg=colour235
 
 ## window with activity status
-set -g window-status-activity-bg colour75	# fg and bg are flipped here due to
-set -g window-status-activity-fg colour233	# a bug in tmux
+set -g window-status-activity-style bg=colour75,fg=colour233
 
 ## window separator
 set -g window-status-separator " "
@@ -99,12 +88,10 @@ set -g window-status-separator " "
 set -g status-justify centre
 
 ## pane border
-set -g pane-border-bg default
-set -g pane-border-fg white
+set -g pane-border-style bg=default,fg=white
 
 ## active pane border
-set -g pane-active-border-bg default
-set -g pane-active-border-fg colour39
+set -g pane-active-border-style bg=default,fg=colour39
 
 ## pane number indicator
 set -g display-panes-colour colour233
@@ -115,16 +102,13 @@ set -g clock-mode-colour colour39
 set -g clock-mode-style 24
 
 ## message
-set -g message-bg colour39
-set -g message-fg black
+set -g message-command-style bg=colour39,fg=black
 
 ## command message
-set -g message-command-bg colour233
-set -g message-command-fg black
+set -g message-command-style bg=colour233,fg=black
 
 ## mode
-set -g mode-bg colour39
-set -g mode-fg colour232
+set -g mode-style bg=colour39,fg=colour232
 
 # activity
 set -g monitor-activity on
